@startuml DiagramaPaquetes

package views{}
package controllers{}
package models{}

views ..> controllers
controllers ..> models

package "View" as Vista {
class StudentView
class ExamView
class RequestCertificateView
}

package "Controller" as Controlador {
class TakeExamController
class AnswerQuestionController
class RequestCertificateController
}

package "Model" as Modelo {
class User
class Exam
class Question
class Result
class Certificate
}

Vista ...> Controlador
Controlador ...> Modelo

@enduml